2014-04-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58207
	* g++.dg/cpp0x/constexpr-ice15.C: New.

2014-04-04  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/59626
	testcase by Richard Biener
	* gcc.dg/lto/pr59626_0.c: New testcase.
	* gcc.dg/lto/pr59626_1.c: New testcase.

2014-04-04  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	PR debug/60655
	* gcc.c-torture/compile/pr60655-1.c: New test.

2014-04-04  Martin Jambor  <mjambor@suse.cz>

	PR ipa/60640
        * g++.dg/ipa/pr60640-1.C: New test.
        * g++.dg/ipa/pr60640-2.C: Likewise.
        * g++.dg/ipa/pr60640-3.C: Likewise.
        * g++.dg/ipa/pr60640-4.C: Likewise.

2014-04-04  Jeff Law  <law@redhat.com>

	PR target/60657
	* gcc.target/arm/pr60657.c: New test.

2014-04-04  Richard Biener  <rguenther@suse.de>

	PR ipa/60746
	* g++.dg/torture/pr60746.C: New testcase.

2014-04-04  Fabien Chêne  <fabien@gcc.gnu.org>

	* g++.old-deja/g++.robertl/eb121.C: Adjust.
	* g++.old-deja/g++.jason/overload21.C: Likewise.
	* g++.old-deja/g++.law/init5.C: Likewise.

2014-04-03  Cong Hou  <congh@google.com>

	PR tree-optimization/60505
	* gcc.dg/vect/pr60505.c: New test.

2014-04-03  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/60740
	* gcc.dg/graphite/pr60740.c: New testcase.

2014-04-03  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.dg/warn/Wnvdtor.C: Add non-polymorphic case.
	* g++.dg/warn/Wnvdtor-2.C: New.
	* g++.dg/warn/Wnvdtor-3.C: New.
	* g++.dg/warn/Wnvdtor-4.C: New.
	* g++.dg/warn/Weff1.C: Delete.
	* g++.old-deja/g++.benjamin/15309-1.C: Delete.
	* g++.old-deja/g++.benjamin/15309-2.C: Delete.

2014-04-02  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/60659
	* testsuite/g++.dg/torture/pr60659.C: New testcase.

2014-04-02  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR tree-optimization/60733
	* gcc.dg/torture/pr60733.c:  New test.

2014-04-02  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/60650
	* gcc.target/arm/pr60650-2.c: New.
